# chat-app

./: .gitignore
backend/: config.py  constants.py  docs.py  enums.py  logging.conf  main.py  pyproject.toml  results.py  sockets.py
backend/controllers/: account.py  auth.py  chats.py  messages.py  routers.py
backend/models/: db.py  models.py
backend/schemas/: model_schemas.py  payloads.py
backend/services/: chat_service.py  message_service.py  setup_service.py  transaction_worker.py  util_service.py
backend/services/chat_services/: chat_service.py  chat_validation_service.py
backend/services/role_services/: role_service.py  role_type_service.py
backend/services/user_services/: auth_service.py  email_service.py  token_generator.py  user_service.py  user_validation_service.py
backend/templates/: account_activation_email.html  password_reset_email.html
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Activation.tsx  Chat.tsx  Chats.tsx  Footer.tsx  Forms.tsx  Header.tsx  Home.tsx  Login.tsx  Registration.tsx  RoundButton.tsx  Tmp.tsx
frontend/src/http/: index.ts
frontend/src/models/: User.ts  index.ts  models.ts  payloads.ts  results.ts
frontend/src/resources/: apiRoutes.ts  index.ts  routes.ts
frontend/src/services/: ChatsService.ts  FormValidationService.ts  UserService.ts  index.ts
frontend/src/store/: index.ts  socketMiddleware.ts  store.ts
frontend/src/styles/: activation.css  activation.css.map  activation.scss  app.css  app.css.map  app.scss  fonts.css  fonts.css.map  (+26 more)
(+12 files in other folders)
