[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["gregbi <grigorybil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.32"
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.3"
PyJWT = "^2.3.0"
yagmail = "^0.15.277"
keyring = "^23.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
